# PentaLedger

./: .env.example  .gitignore  .gitmodules  CMakeLists.txt  README.md  docker-compose.yml
.cursor/plans/: accounting_application_architecture_112e2693.plan.md
api/: CMakeLists.txt  Dockerfile
api/include/controllers/: AccountController.h  AuthController.h  JournalEntryController.h  ReportController.h
api/include/database/: DbManager.h
api/include/middleware/: CorsFilter.h  JwtAuth.h
api/include/utils/: JsonResponse.h  PasswordHasher.h
api/src/: main.cpp
api/src/controllers/: AccountController.cpp  AuthController.cpp  JournalEntryController.cpp  ReportController.cpp
api/src/database/: DbManager.cpp
api/src/middleware/: CorsFilter.cpp  JwtAuth.cpp
api/src/utils/: JsonResponse.cpp  PasswordHasher.cpp
apps/cli/: CMakeLists.txt  README.md  main.cpp
apps/ios/: README.md
apps/ios/PentaLedgerMileage/: Info.plist  PentaLedgerMileage.entitlements  PentaLedgerMileageApp.swift
apps/ios/PentaLedgerMileage.xcodeproj/: project.pbxproj
apps/ios/PentaLedgerMileage/Models/: MileageCategory.swift  MileageTrip.swift
apps/ios/PentaLedgerMileage/Services/: LocationService.swift  MileageCalculator.swift
apps/ios/PentaLedgerMileage/Views/: ActiveTripView.swift  ContentView.swift  ManualEntryView.swift  SettingsView.swift  TripListView.swift
apps/ios/PentaLedgerMileageTests/: MileageCalculatorTests.swift
database/: Dockerfile  init.sql
examples/: CMakeLists.txt  basic_usage.cpp
include/pentaledger/: btree_file.hpp  btree_file_header.hpp  data_file.hpp  data_file_header.hpp  record_pointer.hpp  types.hpp
sdk/include/pentaledger/: version.hpp
sdk/include/pentaledger/transportation/: HOS_clocks.hpp  HOS_types.hpp  MileageCategories.hpp  US_states.hpp  fuel_efficiency.hpp  fuel_types.hpp  irs_mileage_rates.hpp  operations_type.hpp  transportation.hpp  trip_types.hpp
server/: CMakeLists.txt  main.cpp
src/btree/: btree_file.cpp
src/storage/: data_file.cpp
tests/: CMakeLists.txt  test_btree_file.cpp  test_data_file.cpp
web/: Dockerfile  package.json
web/src/lib/: types.ts
web/src/lib/api/: client.ts
web/src/lib/stores/: auth.ts
web/src/routes/: +layout.svelte  +page.svelte
web/src/routes/accounts/: +page.svelte
web/src/routes/journal-entries/: +page.svelte
web/src/routes/login/: +page.svelte
web/src/routes/register/: +page.svelte
web/src/routes/reports/: +page.svelte
